--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- NAV-BAR -->
     <nav>
         <div class="container main-nav flex">
-            <a href="#" class="my-logo"><img src="/rakeshDa/images/logo.png" alt="company-logo"></a>
+            <a href="#" class="my-logo"><img src="logo.png" alt="company-logo"></a>
 
             <div class="nav-links">
                 <ul class="flex">
